dream creation form seemed unnecessarily broken up, consolidated into title and description. Fixed dream recall to properly line-break instead of just stretching off to infinity

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -2,6 +2,10 @@
   background-color: black;
 }
 
+.tall{
+  height: 200px;
+}
+
 hr{
   width: 70%;
 }
@@ -12,10 +16,14 @@ hr{
   border-color: darkblue;
 }
 
+.wrapIt{
+  word-wrap:break-word;
+}
+
 .text-color-gray{
   color: #888888;
 }
 
 .topSpacing{
-  margin-top: 52px;
+  margin-top: 60px;
 }
